// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KubeStatusIndicator snapshots renders error 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #BC3B1D;
}

.c4 svg {
  fill: #BC3B1D;
  height: 16px;
  width: 16px;
}

.c4 svg path.path-fill {
  fill: #BC3B1D !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c4 svg path.stroke-fill {
  stroke: #BC3B1D !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c4 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c4 svg rect.rect-stroke {
  stroke: #BC3B1D;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c4.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c4.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c4 .c5 {
  margin-left: 4px;
  color: #BC3B1D;
}

.c4 img {
  width: 16px;
}

.c1 .c3 .c5 {
  color: #1a1a1a;
  font-weight: 400;
}

<div
  className="c0 c1 KubeStatusIndicator"
>
  <div
    className="c2 c3 c4"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
    <span
      className="c5 c6"
      color="alertOriginal"
      size="medium"
    >
      Not Ready
    </span>
  </div>
</div>
`;

exports[`KubeStatusIndicator snapshots renders success 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #27AE60;
}

.c4 svg {
  fill: #27AE60;
  height: 16px;
  width: 16px;
}

.c4 svg path.path-fill {
  fill: #27AE60 !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c4 svg path.stroke-fill {
  stroke: #27AE60 !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c4 svg rect.rect-height {
  height: 16px;
  width: 16px;
}

.c4 svg rect.rect-stroke {
  stroke: #27AE60;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c4.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c4.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c4 .c5 {
  margin-left: 4px;
  color: #27AE60;
}

.c4 img {
  width: 16px;
}

.c1 .c3 .c5 {
  color: #1a1a1a;
  font-weight: 400;
}

<div
  className="c0 c1 KubeStatusIndicator"
>
  <div
    className="c2 c3 c4"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
    <span
      className="c5 c6"
      color="successOriginal"
      size="medium"
    >
      Applied revision: main/a3a54ef4a87f8963b14915639f032aa6ec1b8161
    </span>
  </div>
</div>
`;
